css/main.css
@import url(https://fonts.googleapis.com/css?family=Roboto+Slab:400,700);

html {
  position: relative;
  min-height: 99%;
}

body {
  /* Margin bottom by footer height */
  margin-bottom: 60px;
}

/* Customize container */
@media (min-width: 768px) {
  .container {
    max-width: 1000px;
  }
}

p {
  line-height: 1.5em;
}

h1,h2,h3,h4,h5,h6,.h1,.h2,.h3,.h4,.h5,.h6 {
  font-family: 'Roboto Slab';
  font-style: normal;
  font-weight: 700;
}

h1 {
  margin-top: 30px;
}

h2 {
  margin-top: 30px;
}

img.logo {
  height: 32px;
  margin-top: -6px;
}

.jumbotron {
  text-align: center;
  border-bottom: 1px solid #E7E7E7;
  background: transparent;
  background-image: url('../images/bg.jpg');
  background-position: center;
  height: 400px;
  color: white;
  margin-top: -21px;
  padding-top: 116px;
}

.jumbotron .lead {
  max-width: 1000px
}

.jumbotron .lead a {
  color: white;
  text-decoration: underline;
}

.content {
  padding-bottom: 40px;
}

.container .credit {
  margin: 20px 0;
}

#footer {
  position: absolute;
  bottom: 0;
  width: 100%;
  /* Set the fixed height of the footer here */
  height: 60px;
  background-color: #f5f5f5;
}

.flex-container {
  display: flex;
  flex-flow: row wrap;
  align-items: flex-start;
}

.logos {
  justify-content: space-around;
}

/* People */

.people {
  justify-content: flex-start;
}

.person {
  margin: 10px;
  width: 110px;
  height: 140px;
}

.person p {
  text-align: center;
  font-size: 1em;
  font-weight: bold;
  color: white;
  position: relative;
  text-shadow: 1px 1px 2px black;

  padding-bottom: 4px;
  bottom: 140px;
  display: table-cell;
  vertical-align: bottom;
  height: 140px;
  width: 110px;
}

.person img {
  height: 100%;
  width: 100%;
  border-radius: 6px;

  object-fit: cover;
  object-position: center;
}

.image-container> {
  transition: opacity .2s;
  opacity: 1;
}

.image-container>:hover {
  transition: opacity .1s;
  opacity: 0.7;
}

.img-thumbnail {
  min-height:55px;
  height:55px;
  margin-left: 15px;
  margin-top: 15px;
  border: 0 none;
  /*box-shadow: none;*/
}

/* Projects */

.current-projects {
  justify-content: space-between;

  margin-top: 2em;
}

.current-projects .project {
  flex-basis: 200px;

  text-align: center;
  margin-bottom: 10px;
}

.current-projects .project a:hover {
  text-decoration: none;
}

.current-projects .project .heading {
  display: block;
  margin-top: 8px;
  font-size: 1.5em;
  font-weight: bold;
  text-transform: uppercase;
  text-decoration: none;
}

.current-projects .project .caption {
  font-style: italic;
  font-weight: normal;
  text-decoration: none;
  text-align: center;
}

.current-projects .project .logo-container {
  height: 121px;
}

.current-projects .project .logo-container img {
  max-width: 160px;
  max-height: 121px;
  border-radius: 12px;
}

.papers-iframe {
  width: 100%;
  height: 600px;
  border: solid 1px lightgray;
}

table {
    border:#ccc 1px solid;
    border-radius:3px;
}
table th {
    padding:10px 10px 10px 10px;
    border-top:1px solid #fafafa;
    border-bottom:1px solid #e0e0e0;
}
table tr {
    padding-left:10px;
}
table td {
    padding:10px;
    border-top: 1px solid #ffffff;
    border-bottom:1px solid #e0e0e0;
    border-left: 1px solid #e0e0e0;
}

/* Events */
.event-images {
  justify-content: flex-start;
}
.event-image {
  margin: 10px;
}

.tag {
  padding: 10px;
  color: blue;
}

.tag-bullet-list {
  list-style-type: none;
  padding: 0px;
}

/* Group pics */

.grouppic {
  margin: 10px 0;
  max-width: 800px;
}

